--- a/main.css
+++ b/main.css
@@ -5,7 +5,12 @@ body {
   background-color: rgb(215, 238, 203);
   color: tomato;
 }
+
+h4{
+  font-size: 34px;
+}
+
 .jumbotron {
-  background-color: cadetblue;
-  color: aliceblue;
+  background-color: green;
+  color: yellow;
 }
